--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <br>
 </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>    
+    <script src="calc.js"></script>
     <script src="./rectangle.js"></script>
 </body>
 </html>
