矩形计算器v0.5

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 <div>
-    <lable for="">宽度:</lable>
-    <input id="width" type="text">
+    <label>宽度：</label>
+    <input id="width" type="text" autofocus>
+    <span>*</span>
     <br>
     <lable for="">高度:</lable>
     <input id="height" type="text">
+    <span>*</span>
     <br>
     <input id="calculate" type="button" value="计算">
     <br>
@@ -24,7 +26,6 @@
     <br>
 </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>    
-    <script src="calc.js"></script>
-    <script src="./rectangle.js"></script>
+    <script src="bundle.min.js"></script>
 </body>
 </html>
