--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>    
     <!-- <script src="./rectangle.js"></script>
     <script src="./calc.js"></script> -->
+    <script src="//i.wangding.in/js/fork-me-github.js"></script>
+    <script src="//i.wangding.in/js/bsz-page-footer.js"></script>
     <script src="./bundle.min.js"></script>
 </body>
 </html>
