--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <div class="main">
     <label>宽度：</label>
     <input id="width" type="text">
-    <span>*</span>
+    <span class="star">*</span>
     <br>
     <div id="width-validate"></div>
     <lable for="">高度:</lable>
     <input id="height" type="text">
-    <span>*</span>
+    <span class="star">*</span>
     <br>
     <div id="height-validate"></div>
     <input id="calculate" type="button" value="计算">
