--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <script src="./calc.js"></script> -->
     <script src="//i.wangding.in/js/fork-me-github.js"></script>
     <script src="//i.wangding.in/js/bsz-page-footer.js"></script>
-    <script src="./calc.js"></script>
-    <script src="./rectangle.js"></script>
+    <script src="./bundle.min.js"></script>
 </body>
 </html>
